--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
           <li>
             <a href="#articles">
               <img src="images/articles.svg" alt="Articles" width="30" />
-              <p>Articles111111111111111111!</p>
+              <p>Articles!</p>
               <span>Designe & Development</span>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="images/books.svg" alt="Books" width="30" />
-              <p>Books11111111111111111111111</p>
+              <p>Books</p>
               <span>Physical & digital books</span>
             </a>
           </li>
