--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="/"><img src="images/logo.svg" alt="logo" width="100"/></a>
+      <a href="/" class="logo"><img src="images/logo.svg" alt="logo"/></a>
       <nav>
         <ul class="menu">
           <li>
@@ -51,11 +51,14 @@
         </ul>
       </nav>
       <div>
-        <form action="#">
-          <label for="search">Search phease</label><br />
-          <input type="search" name="search" id="search" /><br />
-          <button type="submit">Search</button><br />
-          <button tupe="reset">Reset</button>
+        <form action="#" class="search">
+          <input
+            type="search"
+            name="search"
+            id="search"
+            placeholder="Search please..."
+          />
+          <button type="submit">&nbsp;</button>
         </form>
       </div>
     </header>
